[gd_scene load_steps=13 format=3 uid="uid://p8vf3s0glmab"]

[ext_resource type="Texture2D" uid="uid://dy7to2ev3iykf" path="res://art/menu/nostars_banners_small.png" id="2_1egy0"]
[ext_resource type="Script" path="res://objects/score_banner.gd" id="2_d8cvp"]
[ext_resource type="Texture2D" uid="uid://c1ptg3amxvk6i" path="res://art/menu/star_full.png" id="3_7yd0w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dk4r4"]
atlas = ExtResource("2_1egy0")
region = Rect2(311, 0, 297, 591)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdlqh"]
atlas = ExtResource("2_1egy0")
region = Rect2(608, 0, 297, 591)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w8kt"]
atlas = ExtResource("2_1egy0")
region = Rect2(14, 0, 297, 591)

[sub_resource type="SpriteFrames" id="SpriteFrames_24pig"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk4r4")
}],
"loop": true,
"name": &"dali",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdlqh")
}],
"loop": true,
"name": &"escher",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w8kt")
}],
"loop": true,
"name": &"gogh2",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_rldgc"]
font_size = 400

[sub_resource type="Animation" id="Animation_65oow"]
resource_name = "drop_down"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1500)]
}

[sub_resource type="Animation" id="Animation_qbqtj"]
resource_name = "go_up"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.1, 1),
"update": 0,
"values": [Vector2(0, 1500), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tp1gn"]
_data = {
"drop_down": SubResource("Animation_65oow"),
"go_up": SubResource("Animation_qbqtj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mserr"]
size = Vector2(5.9995, 2.11112)

[node name="ScoreBanner" type="Node2D"]
scale = Vector2(0.251, 0.25)
script = ExtResource("2_d8cvp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1500)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_24pig")
animation = &"dali"

[node name="Stars" type="Node2D" parent="AnimatedSprite2D"]

[node name="Star1" type="Sprite2D" parent="AnimatedSprite2D/Stars"]
visible = false
position = Vector2(-768.924, -556.44)
scale = Vector2(2.50846, 2.65316)
texture = ExtResource("3_7yd0w")

[node name="Star2" type="Sprite2D" parent="AnimatedSprite2D/Stars"]
visible = false
position = Vector2(-398.406, -556.44)
scale = Vector2(2.50846, 2.65316)
texture = ExtResource("3_7yd0w")

[node name="Star3" type="Sprite2D" parent="AnimatedSprite2D/Stars"]
visible = false
position = Vector2(-27.8883, -556.44)
scale = Vector2(2.50846, 2.65316)
texture = ExtResource("3_7yd0w")

[node name="HighScoreLabel" type="Label" parent="AnimatedSprite2D"]
offset_left = -111.984
offset_top = -36.0
offset_right = 1734.02
offset_bottom = 510.0
scale = Vector2(0.12, 0.12)
label_settings = SubResource("LabelSettings_rldgc")

[node name="LastRunLabel" type="Label" parent="AnimatedSprite2D"]
offset_left = -111.984
offset_top = 82.0
offset_right = 1701.02
offset_bottom = 628.0
scale = Vector2(0.12, 0.12)
label_settings = SubResource("LabelSettings_rldgc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tp1gn")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(288.521, 1864)
scale = Vector2(133.585, 404.979)
shape = SubResource("RectangleShape2D_mserr")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
